@@ -1,5 +1,8 @@
 2006-12-27  Danilo Šegan  <danilo@gnome.org>
 
+	* update-stats.py (LocStatistics.doc_l10n_stats): Use potbase
+	instead of docpath as domain name for docs.
+
 	* gnome-modules.xml.in:
 	* releases.xml.in: Updated a couple of modules.
 
